# manim_datastructures

./: .gitignore  README.md  notes_context_switch.md  pyproject.toml
Processes/PCB/: pcb.py
Processes/context_switching/: cs.py
processes/context_switching/: cpu.py
processes/cpu/: cpu.py  test.py
processes/pcb/: pcb.py  pcb2.py  process.py
src/: m_dynamic_table.py  m_forum_answer.py  m_stack.py  m_stack2.py  m_stack3.py
src/manim_datastructures/: __init__.py  m_abstract_memory.py  m_address.py  m_angled_arrow.py  m_curly_bracket.py  m_disk.py  m_map.py  m_memory.py  m_orthogonal_line.py  m_page.py  m_page_table.py  m_queue.py  m_stack.py  m_table.py  m_virtual_address.py  utils.py
test/: address_test.py  curly_bracket_test.py  disk_test.py  map_test.py  memory_test.py  orthogonal_line_test.py  page_table_test.py  queue_test.py  stack_test.py  table_test.py  test_it.py  test_setup.py  virtual_address_test.py  voiceover_test.py
videos/: context_switch.py  first_scene.py  paging.py  virtual_memory.py
videos/full_process_video/: context_switch.py  example1.c  notes.md  overview_slide.py  process_creation.py  process_creation_fork.py  process_states.py  process_termination.py  process_waiting.py  program_execution.py  setup.py
videos/full_process_video/code_examples/: example1.py  example1_output.txt  example2.c  example2_output.txt  example3.c  test  test2
videos/full_process_video/text_to_speech/nor/: overview_slide.txt  process_creation_fork_1.txt  process_creation_fork_2.txt  (+6 more)
videos/full_virtual_memory_video/: introduction.py  virtual_memory.py
(+52 files in other folders)
